services/hackathon-platform/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hackathon-platform
  annotations:
    argocd.argoproj.io/sync-wave: "-3"
